Proper alignment, and fixing icon name

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -40,8 +40,7 @@ footer .footer.block div > div:last-of-type > ul {
 footer .footer.block div > div:last-of-type > ul > li {
   display: inline-block;
   margin: 0 1rem;
-  vertical-align: middle;
-  line-height: 1.5rem;
+  line-height: 2rem;
 }
 
 footer .footer.block div > div:last-of-type > ul > li > a:hover {
